syntax="proto3";

package chatservice;

option go_package="/protos";

service ChatService {
    rpc SendPrivateMessage(MessageRequest) returns (MessageResponse);
    rpc ChatRoom(stream ChatRequest) returns (stream ChatResponse);
    rpc LeaveRoom(LeaveRoomRequest) returns (LeaveRoomResponse);
}

message MessageRequest {
    int32 senderId = 1;
    int32 receiverId = 2;
    string text = 3;
}

message MessageResponse {
    string status = 1;
}

message LeaveRoomRequest {
    int32 roomId = 1;
    int32 userId = 2;
}

message LeaveRoomResponse {
    string status = 1;
}

message ChatRequest {
    string text = 1;
    int32 senderId = 2;
    int32 roomId = 3;
}

message ChatResponse {
    string text = 1;
    int32 senderId = 2;
}
